[fixed] gradle ktlint format and scanning